# controller/Auth.Controller.js
@@ -1,5 +1,7 @@
 const User = require("../models/User.model");
 const UserService = require("../services/User.Service");
+const bcrypt = require("bcryptjs");
+const jwt = require("jsonwebtoken");
 
 const registerUser = async (req, res, next) => {
   const { firstName, lastName, email, password } = req.body;
@@ -35,5 +37,36 @@ const registerUser = async (req, res, next) => {
   }
 };
 
+const login = async (req, res, next) => {
+  const { email, password } = req.body;
 
-module.exports = { registerUser, };
+  if (!email || !password) {
+    return res.status(400).json({ error: "Missing required fields" });
+  }
+
+  try {
+    const user = await UserService.getUserByEmail(email);
+
+    if (!user) {
+      return res.status(404).json({ error: "User not found" });
+    }
+
+    const isPasswordMatch = await bcrypt.compare(password, user.password);
+
+    if (!isPasswordMatch) {
+      return res.status(401).json({ error: "Invalid credentials" });
+    }
+
+    // create token
+    const tokenPayload ={id: user.id, email: user.email};
+
+    const token = jwt.sign(tokenPayload, process.env.JWT_SECRET, {expiresIn: '10m'});
+
+    return res.status(200).json({token: token});
+
+  } catch (err) {
+    next(err);
+  }
+};
+
+module.exports = { registerUser, login };
