# middlewares/Validations.js
@@ -1,4 +1,4 @@
-const { NewStudentSchema, NewGradeSchema, NewUserSchema } = require("../models/schemas/ValidationSchemas");
+const { NewStudentSchema, NewGradeSchema, NewUserSchema, loginSchema } = require("../models/schemas/ValidationSchemas");
 
 module.exports.validateNewUserInput = (req, res, next) => {
     const {error} = NewUserSchema.validate(req.body);
@@ -30,4 +30,14 @@ module.exports.validateNewStudentInput = (req, res, next) => {
     }
     return next();
 }
+
+module.exports.validateLoginInput = (req, res, next) =>{
+    const {error} = loginSchema.validate(req.body);
+
+    if (error) {
+        const msg = error.details.map((el) => el.message).join(",");
+        return res.status(400).json({error: msg});
+    }
+    return next();
+};
 
