# routes/auth.js
@@ -1,12 +1,12 @@
 const router = require("express").Router();
 const AuthController = require("../controller/Auth.Controller");
-const { validateNewUserInput } = require("../middlewares/Validations");
+const {
+  validateNewUserInput,
+  validateLoginInput,
+} = require("../middlewares/Validations");
 
-router.post(
-  "/register",
-    validateNewUserInput,
-  AuthController.registerUser
-);
+router.post("/register", validateNewUserInput, AuthController.registerUser);
 
+router.post("/login", validateLoginInput, AuthController.login);
 
 module.exports = router;
